# wp5-metal-additive-common

./: .env  .gitignore  .gitmodules  README.md  common_config.cmake  docker-compose.coppeliasim.yml  docker-compose.ur10e-polyscope.yaml  docker-compose.yml  setup.sh
data/: damage_msg.bag
doc/: launch.json
docker/: Dockerfile  README.md  docker-compose.yml
docker/main_pkg/: Dockerfile  docker-compose-common.yml  docker-compose-no-nvidia.yml  docker-compose.yml
docs/: .clang-format  README.md
ros-modbus-device-driver/: CMakeLists.txt
scripts/: setup.sh  setup_git.sh  test.py
scripts/hooks/: post-commit  pre-commit
src/: common_config.cmake
src/anima_laser_node/: CMakeLists.txt  package.xml
src/anima_laser_node/config/: laser_param.yaml
src/anima_laser_node/laser_description/collision/: laser_holder_collision.stl
src/anima_laser_node/laser_description/visual/: laser_holder_visual.stl
src/anima_laser_node/launch/: laser.launch
src/anima_laser_node/scripts/: laser_anima.py
src/anima_rokae_service/: CMakeLists.txt  package.xml
src/anima_rokae_service/config/: robots.yaml  task.yaml  ur5.yaml  xMateCR7.yaml
src/anima_rokae_service/launch/: bringup.launch  run_step.launch
src/anima_rokae_service/scripts/: client.py  moveit_anima.py  server.py
src/anima_rokae_service/srv/: MAMControl.srv
src/poc_scripts/: moveit_circle.py  moveit_mam.py  moveit_spline.py  test_moveit.py  translate_msgs.py
src/ur10e_anima/: README.md
src/urdf/: ur5.urdf
src/wp5-common-utilities/: CMakeLists.txt  package.xml
src/wp5-common-utilities/include/: YamlTools.h  conversion_tools.h  convertion_tools.h  debug_tools.h  math_tools.h  yaml_tools.h
src/wp5-common-utilities/src/: conversion_tools.cpp  convertion_tools.cpp  debug_tools.cpp  math_tools.cpp  yaml_tools.cpp
src/wp5-mam-planner/: CMakeLists.txt  package.xml
src/wp5-mam-planner/config/: obstacles.yaml  waypoints.yaml
src/wp5-mam-planner/include/: IPlannerBase.h  MAMPlanner.h  ObstaclesManagement.h  PlannerCleaning.h  PlannerWelding.h  ROI.h  Subtask.h  WaypointParser.h  Waypoints.h
src/wp5-mam-planner/launch/: publish_waypoints.launch  test_subtask.launch  test_waypoint_parser.launch  wp5_mam_planner_node.launch
src/wp5-mam-planner/scripts/: publish_waypoints.py
src/wp5-mam-planner/src/: IPlannerBase.cpp  MAMPlanner.cpp  ObstaclesManagement.cpp  PlannerCleaning.cpp  PlannerWelding.cpp  ROI.cpp  Subtask.cpp  WaypointParser.cpp  Waypoints.cpp  main.cpp
src/wp5-mam-planner/test/: test_subtask.cpp  test_waypoint_parser.cpp
src/wp5-mam-tasks/: CMakeLists.txt  README.md  package.xml
src/wp5-mam-tasks/action/: ExecuteTask.action
src/wp5-mam-tasks/config/: robot_task.yaml  robot_task_config.yaml  waypoints.yaml
src/wp5-mam-tasks/include/: ExecuteTaskAction.h  ITaskBase.h  ROI.h  Subtask.h  TaskCleaning.h  TaskFSM.h  TaskFactory.h  TaskWelding.h
src/wp5-mam-tasks/launch/: main_task.launch
src/wp5-mam-tasks/scripts/: test_offset_function.py  test_offset_function_mk2.py  test_rotate_vector.py
src/wp5-mam-tasks/src/: ITaskBase.cpp  ROI.cpp  Subtask.cpp  TaskCleaning.cpp  TaskWelding.cpp  main_task.cpp
src/wp5-robotic-arms/: CMakeLists.txt  README.md  package.xml
src/wp5-robotic-arms/config/: arm_robot_config.yaml  fk_joint_config.yaml  ik_pose_config.yaml  robotic_arm.yaml
src/wp5-robotic-arms/include/: IRoboticArmBase.h  RoboticArmCr7.h  RoboticArmFactory.h  RoboticArmUr.h  RoboticArmUr5.h
src/wp5-robotic-arms/launch/: perform_fk.launch  perform_ik.launch  test_robotic_arm.launch  test_robotic_arm_ur.launch  test_robotic_arm_ur5.launch
src/wp5-robotic-arms/src/: IRoboticArmBase.cpp  RoboticArmCr7.cpp  RoboticArmFactory.cpp  RoboticArmUr.cpp  RoboticArmUr5.cpp
src/wp5-robotic-arms/test/: test_robotic_arm.cpp  test_robotic_arm_ur.cpp  test_robotic_arm_ur5.cpp
src/wp5-robotic-arms/tools/: perform_fk.cpp  perform_ik.cpp
src/wp5-ros-interface/: CMakeLists.txt  README.md  package.xml
src/wp5-ros-interface/config/: ros_interface_config.yaml
src/wp5-ros-interface/include/: IRosInterfaceBase.h  RosInterfaceNoetic.h
src/wp5-ros-interface/src/: RosInterfaceNoetic.cpp
ur-package/docker/: README.md  docker-compose.yml
ur-package/ur_description/: package.xml
wp5-common-utilities/: CMakeLists.txt  README.md
wp5-common-utilities/include/: conversion_tools.h  debug_tools.h  math_tools.h  yaml_tools.h
wp5-common-utilities/src/: conversion_tools.cpp  debug_tools.cpp  math_tools.cpp  yaml_tools.cpp
wp5-mam-planner/: CMakeLists.txt  README.md  package.xml
wp5-mam-planner/config/: obstacles.yaml  obstacles_anima.yaml  obstacles_epfl.yaml
wp5-mam-planner/include/: IPlannerBase.h  ObstaclesManagement.h  PlannerCleaning.h  PlannerWelding.h
wp5-mam-planner/launch/: wp5_mam_planner_node.launch
wp5-mam-planner/src/: IPlannerBase.cpp  ObstaclesManagement.cpp  PlannerCleaning.cpp  PlannerWelding.cpp
wp5-mam-planner/tools/: modify_trajectories.py
wp5-mam-planner/trajectories/: default1.txt  default1.yaml  default2_welding.txt  default2_welding.yaml  default3.txt  default3.yaml
wp5-mam-tasks/: CMakeLists.txt  README.md  package.xml
wp5-mam-tasks/config/: robot_task.yaml  waypoints.yaml  waypoints_1st_demo.yaml
wp5-mam-tasks/include/: ITaskBase.h  ROI.h  Subtask.h  TaskCleaning.h  TaskFSM.h  TaskFactory.h  TaskManager.hpp  TaskWelding.h  WaypointParser.h
wp5-mam-tasks/launch/: main_task.launch  publish_waypoints.launch  tasks_action_server.launch  test_waypoint_parser.launch
wp5-mam-tasks/scripts/: publish_waypoints.py
wp5-mam-tasks/src/: ITaskBase.cpp  ROI.cpp  Subtask.cpp  TaskCleaning.cpp  TaskManager.cpp  TaskWelding.cpp  WaypointParser.cpp  task_node.cpp
wp5-mam-tasks/test/: test_waypoint_parser.cpp
wp5-robotic-arms/: README.md
wp5-robotic-arms/config/: fk_joint_config.yaml  ik_pose_config.yaml  (+1 more)
wp5-robotic-arms/libs/ik-geo-cpp/: CMakeLists.txt  README.md
wp5-robotic-arms/libs/ik-geo-cpp/example/: CMakeLists.txt
wp5-robotic-arms/libs/ik-geo-cpp/example/src/: main.cpp
wp5-robotic-arms/libs/ik-geo-cpp/rust-wrapper/: Cargo.toml
wp5-ros-interface/: README.md
(+189 files in other folders)
