<?xml version="1.0"?>
<package>
    <name>anima_rokae_service</name>
    <version>0.0.1</version>
    <description>
        This package provides a service to use make the rokae MoveIt experiments easier.
    </description>
    <maintainer email="lmunier@protonmail.com">Louis Munier</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

    <export>
        <message_runtime_depend>std_msgs</message_runtime_depend>
    </export>
</package>