<?xml version="1.0"?>
<package format="2">
    <name>wp5_common_utilities</name>
    <version>1.0.0</version>
    <description>Common utilities for WP5</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="lmunier@protonmail.com">Louis Munier</maintainer>
    <maintainer email="tristan_bonato@hotmail.com">Tristan Bonato</maintainer>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>