<?xml version="1.0"?>
<package format="2">
    <name>wp5_common_utilities</name>
    <version>1.0.0</version>
    <description>Common utilities for WP5</description>

    <maintainer email="lmunier@protonmail.com">Louis Munier</maintainer>
    <maintainer email="tristan_bonato@hotmail.com">Tristan Bonato</maintainer>

    <license>BSD-3-Clause</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
</package>