<?xml version="1.0"?>
<package format="2">
  <name>wp5_mam_planner</name>
  <version>0.0.0</version>
  <description>The wp5-mam-planner package</description>

  <maintainer email="lmunier@protonmail.com">Louis Munier</maintainer>
  <maintainer email="tristan_bonato@hotmail.com">Tristan Bonato</maintainer>

  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>std_msgs</depend>
  <depend>wp5_common_utilities</depend>
  <depend>wp5_robotic_arms_drivers</depend>
  <depend>wp5_ros_interface</depend>
</package>