<?xml version="1.0"?>
<package format="2">
  <name>wp5_mam_tasks</name>
  <version>0.0.0</version>
  <description>The wp5-mam-main-task package</description>

  <maintainer email="lmunier@protonmail.com">Louis Munier</maintainer>
  <maintainer email="tristan_bonato@hotmail.com">Tristan Bonato</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>wp5_common_utilities</depend>
  <depend>wp5_mam_planner</depend>
  <depend>wp5_robotic_arms_drivers</depend>
</package>